css/style.css
/*****************************************************
* CSS Mockup Activity - Custom CSS Stylesheet
* @author rlewis37
*
* Some rules have been included here to give you a head start.
* Create your own custom CSS rules below. Have fun!
******************************************************/
html, body {
	margin: 0;
	box-sizing: border-box;
}

.container {
	/*! display: inline-block; */
	margin: 0 auto;
	padding: 0 2rem;
}

.clearfix {
	clear: both;
}

/* create a responsive container */
@media only screen and (min-width: 1200px) {
	.container { width: 1170px; }
}

@media only screen and (min-width: 992px) and (max-width: 1199px) {
	.container { width: 970px; }
}

@media only screen and (min-width: 768px) and (max-width: 991px) {
	.container { width: 750px; }
}

/*****************************************************
* Flexbox Sticky Footer
* http://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/
******************************************************/

/*corrects IE min-height bug*/
html { display: flex;}
body { width: 100%;}

/* .sfooter {
	display: flex;
	flex-direction: column;
	min-height: 100vh;
}

.sfooter-content {
	flex: 1 0 auto;
}
 */
/*****************************************************
* ADD YOUR OWN CSS BELOW! (ﾉ◕ヮ◕)ﾉ*:･ﾟ✧
*
* HINT: You might want to be conversant with the following:
* * Shorthand syntax for padding, margin, and borders
* * Display property and values... and the differences between them.
* * The Box Model
* * Pseudo Classes
* * Attribute Selectors
******************************************************/
/*Applying this font  */
@font-face {
	font-family: "Liberation Mono";
	src: url(./LiberationMono-Regular.ttf);
}

.container {
	font-family: "Liberation Mono", Courier, monospace;
}

/*  The header*/
header {
	display: flex;
	/* 	display: block; */
	color: #00ff00;
	background-color: #333333;
	/* 	display: flex; */
	font-size: 1.rem;
	/* ! align-items: center; */
	/* ! flex-direction: row; */
	/* ! justify-content: space-between; */
	padding-left: 20%;
	padding-right: 20%;
	padding-top: 1%;
	padding-bottom: 1%;
	/* 	margin-right: 50%; */
}

/* This may affect the janeway box, mostly def the header text. */
header > .container {
	/* 	display: inline-block; */
	display: flex;
	/* 	flex-direction: row; */
	/* 	margin-bottom: 18px; */
	/* 	margin-right: 9em; */
	font-size: 1.4rem;
	align-items: baseline;
	/*   align-content: flex-start;  */
	justify-content: space-between;
	/* 	padding-right: 50%; */
}
/*  *********************************************************/
/*  Welcome to my homepage image*/
.container > img {
	/* 	 width: 100% */
	/* 		height: auto; */
	/* 	display: flex; */
	/* 	display: inline; */
	margin-left: 30%;
	margin-right: auto;
	margin-top: 7.5%;
	margin-bottom: 2%;
}
/*  *********************************************************/
/*  Janeway box*/
.instructions-wrapper {
	display: flex;
	flex-direction: row;
	/* 	justify-content: space-between; */
	width: 100%;
	/* 	height: 100%; */
	margin-bottom: 4%;
	border: 3px solid black;
	border-width: thick;
	padding: 2.5em;
	text
		/*margin-left: 50%; */
}

/* Janeway Picture */
.instructions-wrapper > img {
	padding-left: 18em;
	height: 13em;
}
/*  *****************************************************************/
/* Picard box */
.about-me {
	display: flex;
	background-color: #0000ff;
	padding-top: 5em;
	/* 	padding-left: 0%; */
	/* 	padding-right: 100%; */
	height: 26em;
	width: 100%;
	/* 	margin: auto; */
	float: right;
}

.about-me > .container {
	/* 	display: flex; */
	margin-left: 25%;
	margin-right: 19%;
	/* 	flex-direction: column; */
	/* 	flex-wrap: wrap; */
	/* 	text-align: left; */
	/* 	float: left; */
	/*   align-content: space-around; */
	/* 	justify-content: space-between; */
	/* 	align-items: stretch; */
	/* 	margin-left: 100px; */
	width: 61%;
}

/* Picard picture */
.about-me > .container > img {
	margin: 0;
	width: 400px;
	height: 333px;
	float: left;
	margin-right: 2em;
	border: 3px solid white;
}

.about-me > .container > h2 {
	/* 	display: flex; */
	/*! justify-content: space-around; */
	/*! flex-direction: row; */
	/*! margin-left: 1%; */
	/*! padding-right: 1000px; */
	/* 	width: 1000000000px; */
	/*! text-decoration-color: red; */
}

.about-me > .container > p {
	/*! display: block; */
	/*! justify-content: space-around; */
	/*! flex-direction: column; */
	margin-left: 1%;
	height: 5em;
	/* 	width: 100px; */
	/* 	justify-content: space-around; */
	align-items: stretch;
	padding: 1px;
	padding-bottom: 25px;
}

.about-me > .container > p > span {
	/* 	display: flex; */
	/* 	justify-content: space-around; */
	/* 	flex-direction: row; */
	/* 	margin-left: 1%; */
	color: #ffe76f;
	font-style: italic;
	/* 	justify-content: flex-start; */
	/* 	align-self: flex-start; */
	/* 	display:; */
}
/*  PROFESSIONAL SKILLS SECTION *************************************************************/
section:nth-child(4n) {
	/* 	display: inline-block; */
	/* 	display: flex; */
	text-align: right;
	/* 	flex-direction: column; */
	/* 	justify-content: flex-end; */
	font-size: 1.5rem;
	width: 85%;
	margin-left: 7%;
	/* 	padding-right: 50px; */
	margin-top: 24%;
}
section:nth-child(4n) table {
	/* 	display: block; */
	/* 	display: inline-block; */
	/* 	display: flex; */
	font-size: 1.4rrem;
	color: #0cf200;

	/* 	padding: 10px; */
	width: 100%;
	/* 	margin-left: 10%; */
	/* 	width: 1000px; */
	float: left;
	/* 	justify-content: flex-start; */
	/* 		padding-right: 0; */
}

section:nth-child(4n) table th,
	/* section:nth-child(4n) table tr, */
section:nth-child(4n) table td {
	/* 	display: grid; */
	/* 	display: inline-block; */
	/* 	display: flex; */
	/*   flex-wrap: wrap; */
	/* flex-direction: column-reverse; */
	/* justify-content: center; */
	/* align-content: flex-end; */
	/* 	align-items: flex-end; */
	/* 	align-self: flex-end; */
	/* flex-wrap: wrap-reverse; */
	/* 	grid-template: 1fr 1fr/1fr 1fr 1fr 1fr; */
	padding: 15px;
	border: 2px solid white;
	/*   width: 0%; */
	text-align: left;
	/* 	border-collapse: collapse; */
	background-color: #333333;
}

/* CONTACT ME SECTION */

section:nth-child(5n){
	display: flex;
	flex-direction: column;
	margin-top: 17%;
	background-color: #333333;
	color: #00ff00;
	justify-content: flex-start;
	font-size: 2rem;
	height: 1%;
	width: 100%;
}

.form-wrapper {
	/* display: block; */
	background-color: #006400;
	padding: 3%;
	/* 	width: 2000px; */
	margin: 4% 0 4% 0;
	width: 100%;
}
label {
	display: block;
}

button {
	background-color: #00ff00;
}

/* FOOTER STYLE */
footer {
	text-align: center;
	color: white;
	background-color: black;
	/*! height: 0; */
}
/* * { */
border: 1px solid red;
}

